<resources>
    <string name="app_name">GreenDeli</string>
    <string name="my_orders">Мои заказы</string>
    <string name="menu">Меню</string>
    <string name="generator">Предложить</string>
    <string name="basket">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="phone">Телефон</string>
    <string name="login">Логин</string>
    <string name="pass">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_out">Выйти</string>
    <string name="authorized">Вы авторизованы под логином </string>
    <string name="successful">Успешно</string>
    <string name="auth_error">Ошибка при авторизации</string>
</resources>