<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_my_orders"
            android:id="@+id/fragment_my_orders"
            android:title="@string/my_orders" />
        <item
            android:icon="@drawable/ic_menu"
            android:id="@+id/fragment_menu"
            android:title="@string/menu" />
        <item
            android:icon="@drawable/ic_generator"
            android:id="@+id/fragment_generator"
            android:title="@string/generator" />
        <item
            android:icon="@drawable/ic_basket"
            android:id="@+id/fragment_basket"
            android:title="@string/basket" />
        <item
            android:icon="@drawable/ic_profile"
            android:id="@+id/fragment_profile"
            android:title="@string/profile" />
    </group>

</menu>