<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/container_input"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/a_input_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rounded_gray"
            android:inputType="textEmailAddress"
            android:focusable="true"
            android:hint="@string/login"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginHorizontal="26dp"
            android:lines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/a_input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rounded_gray"
            android:inputType="text"
            android:focusable="true"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginHorizontal="26dp"
            android:hint="@string/pass"
            android:lines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textSize="17sp" />

        <View
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_marginTop="14dp"
            android:text="@string/sign_in"
            app:strokeWidth="1dp"
            app:strokeColor="@color/green"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_medium"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:layout_height="wrap_content">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registration"
            android:layout_marginTop="14dp"
            android:text="@string/sign_up"
            app:strokeWidth="1dp"
            app:strokeColor="@color/green"
            android:layout_marginStart="8dp"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_medium"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>